RESOLVED FIXED283958
REGRESSION(285922@main): Crash in `WebPageProxy::sendPreventableTouchEvent`
https://bugs.webkit.org/show_bug.cgi?id=283958
Summary REGRESSION(285922@main): Crash in `WebPageProxy::sendPreventableTouchEvent`
Charlie Wolfe
Reported 2024-12-02 20:20:44 PST
Some UI -> WCP messages use a completion handler when an event has been handled, instead of explicitly sending DidReceiveEvent. If a completion handler returns because a WCP has terminated, we won’t have an IPC::Connection& to use for the message checks in didReceiveEvent, leading to a release assertion failure when attempting to access the connection for the mainframe process. We should revert these changes until we have a better way to get an IPC::Connection using sendWithAsyncReply with site isolated web processes.
Attachments
Charlie Wolfe
Comment 1 2024-12-02 20:21:44 PST
Charlie Wolfe
Comment 2 2024-12-02 20:24:24 PST
EWS
Comment 3 2024-12-03 10:36:40 PST
Committed 287284@main (23d986b96f56): <https://commits.webkit.org/287284@main> Reviewed commits have been landed. Closing PR #37355 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.