REGRESSION(285922@main): Crash in `WebPageProxy::sendPreventableTouchEvent` https://bugs.webkit.org/show_bug.cgi?id=283958 rdar://140220599

Reviewed by Pascoe.

This is a partial revert of the message check changes done for site isolation in 285922@main.

Some UI -> WCP messages use a completion handler when an event has been handled, instead of explicitly
sending DidReceiveEvent. If a completion handler returns because a WCP has terminated, we won’t have an
IPC::Connection& to use for the message checks in didReceiveEvent, leading to a release assertion failure
when attempting to access the connection for the mainframe process. We should revert these changes until
we have a better way to get an IPC::Connection using sendWithAsyncReply with site isolated web processes.

* Source/WebKit/UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::processNextQueuedMouseEvent):
(WebKit::WebPageProxy::sendPreventableTouchEvent):
(WebKit::WebPageProxy::handlePreventableTouchEvent):
(WebKit::WebPageProxy::handleTouchEvent):
(WebKit::WebPageProxy::mouseEventHandlingCompleted):
(WebKit::WebPageProxy::keyEventHandlingCompleted):
(WebKit::WebPageProxy::didReceiveEvent):
* Source/WebKit/UIProcess/WebPageProxy.h:

Canonical link: https://commits.webkit.org/287284@main